examples/t1_out.txt
  File "run_pretrain.py", line 102
    def __init__(self, tokenizer: PreTrainedTokenizer, args, file_path: str, block_size=512):
                                ^
SyntaxError: invalid syntax
